# voxel-engine

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  configure.bat  configure.sh  run.bat  run.sh
resources/shaders/: chunk-frag.glsl  chunk-vert.glsl  flat-frag.glsl  flat-vert.glsl  sprite-frag.glsl  sprite-vert.glsl  vertex-frag.glsl  vertex-vert.glsl
src/: Application.cpp  Application.hpp  main.cpp
src/components/: camera.cpp  camera.hpp  sprite.hpp
src/engine/: application.cpp  application.hpp  input.cpp  input.hpp  input_enums.hpp  window.cpp
src/graphics/: shader.cpp  shader.hpp  texture.hpp
src/graphics/objects/: ebo.cpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/jkr/components/: camera.cpp  camera.hpp  transform.cpp  transform.hpp
src/jkr/data/: chunk.cpp  chunk.hpp  voxel.hpp
src/jkr/engine/: application.cpp  application.hpp  input.cpp  input.hpp
src/jkr/graphics/: shader.cpp  shader.hpp  texture.cpp
src/jkr/graphics/objects/: ebo.hpp  vao.cpp
src/jkr/tests/: matrix4_test.cpp  tests.cpp  tests.hpp
src/jkr/types/: common.hpp  flag.hpp  matrix4.cpp  matrix4.hpp  quaternion.cpp  quaternion.hpp  vector2.hpp  vector2i.hpp  vector3f.cpp  vector3f.hpp
src/jkr/types/legacy/: color3f.cpp  color3f.hpp  matrix4.cpp  matrix4.hpp  quaternion.cpp  quaternion.hpp  vector3f.cpp
src/jkr/types/legacy/vector2/: vector2f.cpp
src/jkr/types/vector2/: vector2f.hpp
src/jkr/util/: event_flags.hpp  math.hpp  stb_image.h
src/old/: window.hpp
src/types/: color3f.hpp  matrix4.cpp  matrix4.hpp  vector2i.cpp  vector2i.hpp  vector3f.cpp  vector3f.hpp
src/ui/: image.hpp
